--- a/README.adoc
+++ b/README.adoc
@@ -76,10 +76,13 @@ https://www.linkedin.com/company/appscode/[LinkedIn]
 |https://www.appifylab.com/[Website]  
 |50+
 
-===
+|===
 
-== Contribute
+{nbsp} +
+{nbsp} +
+
+=== Contribute
 Contributions are always welcome! Create a pull request.
 
-== Copyright & License
-Licensed under the MIT License, see the link: LICENSE file for details.
+=== Copyright & License
+Licensed under the MIT License, see the link:LICENSE[LICENSE] file for details.
